--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -78,7 +78,7 @@ a h4, a:hover h4 {
 .navbar-inverse {
 	background: #fff;
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
-	/*position: relative;
+	position: relative;
 	color: black;
 }
 .navbar-inverse:after {
@@ -87,20 +87,20 @@ a h4, a:hover h4 {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 2px;*/
-	background-color: #cd1a1a;
-	background-image: linear-gradient(45deg, #cd1a1a, #cb1a70);
+	height: 2px;
+	background-color: #3044f7;
+	background-image: linear-gradient(45deg, #3044f7, #3044f7);
 }
 .navbar-inverse .navbar-nav > li > a,
 .navbar-inverse .navbar-nav > li > a:focus {
 	color: #f9d2d2;
 }
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-	background-color: #b01717;
+	background-color: #3044f7;
 }
 .navbar-inverse .navbar-nav > li > a:hover {
 	color: #fff;
-	background-color: #b01717;
+	background-color: #3044f7;
 }
 .navbar-brand {
 	padding: 0 15px;
