--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -78,7 +78,7 @@ a h4, a:hover h4 {
 .navbar-inverse {
 	background: #fff;
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
-	position: relative;
+	/*position: relative;
 	color: black;
 }
 .navbar-inverse:after {
@@ -87,7 +87,7 @@ a h4, a:hover h4 {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 2px;
+	height: 2px;*/
 	background-color: #3044f7;
 	background-image: linear-gradient(45deg, #3044f7, #3044f7);
 }
@@ -163,6 +163,7 @@ form label .form-control {
 	white-space: nowrap;
 	color: #cd1a1e;
 	background-clip: text;
+	text-fill-color: transparent;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 
