--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -88,19 +88,19 @@ a h4, a:hover h4 {
 	left: 0;
 	right: 0;
 	height: 2px;*/
-	background-color: #3044f7;
-	background-image: linear-gradient(45deg, #3044f7, #3044f7);
+	background-color: #73d7ff;
+	background-image: linear-gradient(45deg, #4ca1af, #c4e0e5);
 }
 .navbar-inverse .navbar-nav > li > a,
 .navbar-inverse .navbar-nav > li > a:focus {
-	color: #f9d2d2;
+	color: #4ca1af;
 }
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-	background-color: #3044f7;
+	background-color: #73d7ff;
 }
 .navbar-inverse .navbar-nav > li > a:hover {
-	color: #fff;
-	background-color: #3044f7;
+	color: #4ca1af;
+	opacity: 0.6;
 }
 .navbar-brand {
 	padding: 0 15px;
@@ -163,7 +163,6 @@ form label .form-control {
 	white-space: nowrap;
 	color: #cd1a1e;
 	background-clip: text;
-	text-fill-color: transparent;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 
@@ -248,4 +247,8 @@ form label .form-control {
 	100% {
 		transform: translate(-50%,-50%) rotate(360deg);
 	}
+}
+
+.abonner, .box, .connecter{
+	color : #4ca1af;
 }
