--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -2,7 +2,7 @@ html {
 	height: 100%;
 }
 body {
-	background: #f1f1f1;
+	background: #c9c9c9;
 	padding-bottom: 50px;
 	position: relative;
 	min-height: 100%;
