--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -2,7 +2,7 @@ html {
 	height: 100%;
 }
 body {
-	background: #c9c9c9;
+	background: #fff;
 	padding-bottom: 50px;
 	position: relative;
 	min-height: 100%;
@@ -261,4 +261,33 @@ form label .form-control {
 #sendimg{
 	height: 15px;
     width: 15px;
+}
+
+.formulaireinscription{
+	background-color: black;
+}
+
+#img{
+	height: 200px;
+    width: 200px;
+}
+
+#boutonsubmit{
+	border: 2px solid green;
+  border-radius: 15px;
+  background-color: green;
+}
+
+.codepostal{
+	display: inline;
+}
+
+.fomcomplet{
+	display: inline;
+	margin: 25px 25px 25px 25px;
+}
+
+#block{
+	background-color: black;
+	border-bottom: 2px solid grey;
 }
