--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -291,3 +291,8 @@ form label .form-control {
 	background-color: black;
 	border-bottom: 2px solid grey;
 }
+
+#imgpanier{
+	height: 20px;
+    width: 20px;
+}
