--- a/android/app/src/main/res/layout/activity_http_dialog.xml
+++ b/android/app/src/main/res/layout/activity_http_dialog.xml
@@ -96,7 +96,7 @@
 
     <fragment
         android:id="@+id/requestFragment"
-        android:name="fr.ulille.iut.pizzaland.RequestFragment"
+        android:name="fr.ulille.iut.chatisfait.RequestFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -110,7 +110,7 @@
 
     <fragment
         android:id="@+id/responseFragment"
-        android:name="fr.ulille.iut.pizzaland.ResponseFragment"
+        android:name="fr.ulille.iut.chatisfait.ResponseFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
