--- a/server/src/main/resources/static/css/main.css
+++ b/server/src/main/resources/static/css/main.css
@@ -253,10 +253,12 @@ form label .form-control {
 	color : #4ca1af;
 }
 
+/*banniere box*/
+/*
 #boximg{
 	height: 100px;
     width: 100px;
-}
+}*/
 
 #sendimg{
 	height: 15px;
