--- a/server/src/main/webapp/css/main.css
+++ b/server/src/main/webapp/css/main.css
@@ -94,6 +94,7 @@ a h4, a:hover h4 {
 .navbar-inverse .navbar-nav > li > a,
 .navbar-inverse .navbar-nav > li > a:focus {
 	color: #42494a;
+	font-weight: bolder;
 }
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
 	background-color: #73d7ff;
