--- a/server/src/main/webapp/css/box.css
+++ b/server/src/main/webapp/css/box.css
@@ -134,8 +134,15 @@ div{
 
 #bannerfooter{
 	background: white;
-	height: 120px;
+    height: 120px;
+    margin-bottom: 80px;
 }
+
+.contfooter{
+    
+}
+
+
 
 
 
