--- a/server/src/main/webapp/css/listProduct.css
+++ b/server/src/main/webapp/css/listProduct.css
@@ -30,6 +30,14 @@ body {
         height: 100%;
       }
     }
+
+    .img-containerLP{
+      flex: 2;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     .product-info {
       background: #fff;
       flex: 3;
