--- a/android/app/src/main/res/layout/article.xml
+++ b/android/app/src/main/res/layout/article.xml
@@ -23,14 +23,15 @@
 
     <TextView
         android:id="@+id/nomArticle"
-        android:layout_width="83dp"
-        android:layout_height="28dp"
+        android:layout_width="181dp"
+        android:layout_height="31dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
+        android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +65,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="32dp"
+        android:onClick="doAddToPannier"
         android:text="Ajouter au Pannier"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
