--- a/server/src/main/webapp/css/listProduct.css
+++ b/server/src/main/webapp/css/listProduct.css
@@ -38,6 +38,7 @@ body {
     .product-info {
       background: #fff;
       flex: 3;
+    }
       .product-content {
         padding: .2em 0 .2em 1em;
         h1 {
@@ -50,9 +51,11 @@ body {
           font-weight: bold;
           width: 90%;
         }
+      }
+     
 
 .imgLP{
-  
+  width: 10px;
 }
 
         
