--- a/server/src/main/webapp/css/listProduct.css
+++ b/server/src/main/webapp/css/listProduct.css
@@ -56,12 +56,13 @@ body {
      
 
 .imgLP{
-  width: 10px;
+  margin-top: 25px;
 }
 
         
         .buttons {
           padding-top: .4em;
+        }
           .button {
             text-decoration: none;
             color: #5e5e5e;
