--- a/android/app/src/main/res/layout/monpanier.xml
+++ b/android/app/src/main/res/layout/monpanier.xml
@@ -60,6 +60,7 @@
         android:layout_marginEnd="148dp"
         android:layout_marginRight="148dp"
         android:layout_marginBottom="28dp"
+        android:onClick="onPaiement"
         android:text="Payer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
