--- a/android/app/src/main/res/layout/monpanier.xml
+++ b/android/app/src/main/res/layout/monpanier.xml
@@ -73,8 +73,9 @@
         android:layout_marginLeft="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="81dp"
         android:text="Facture :"
+        android:textColor="@color/colorAccent"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/payet"
