--- a/android/app/src/main/res/layout/box.xml
+++ b/android/app/src/main/res/layout/box.xml
@@ -8,18 +8,40 @@
 
     <Button
         android:id="@+id/sabonner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="288dp"
+        android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="1dp"
+        android:background="@color/ok_color"
         android:onClick="onAbonnage"
         android:text="S'abonner a la box"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.387" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/bannierebox" />
+
+    <ListView
+        android:id="@+id/dynamic"
+        android:layout_width="368dp"
+        android:layout_height="226dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="277dp" />
+
 </android.support.constraint.ConstraintLayout>
